--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -155,7 +155,7 @@ body {
   --color-black: #000000;
   --color-grey: #a0a0a0;
 
-  --color-primary: #ed5729;
+  --color-primary: #ff5b06;
 
   --color-primary-rgb: 237, 87, 41;
   --color-grey-rgb: 160, 160, 160;
