--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -91,7 +91,7 @@
 
 .badge {
   background-color: #fff4f1;
-  color: #ed5729;
+  color: #ff5b06;
   font-size: 12px;
   padding: 4px 10px;
   border-radius: 12px;
@@ -128,7 +128,7 @@
 
 .socialLinks a {
   text-decoration: none;
-  color: #ed5729;
+  color: #ff5b06;
   font-weight: 500;
 }
 
